--- a/package.json
+++ b/package.json
@@ -17,19 +17,20 @@
     "start": "webpack serve --mode development --open"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^11.0.0",
+    "@babel/core": "7.16.0",
+    "@babel/preset-env": "7.20.2",
+    "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "11.0.0",
     "eslint": "7.32.0",
     "eslint-config-htmlacademy": "5.0.0",
-    "webpack": "^5.62.1",
-    "webpack-cli": "4.10",
-    "webpack-dev-server": "^4.11.1"
+    "webpack": "5.62.1",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.4.0"
   },
   "engines": {
     "node": "16"
   },
   "dependencies": {
-    "@babel/core": "^7.21.0",
-    "@babel/preset-env": "^7.20.2",
-    "babel-loader": "^9.1.2"
+    "dayjs": "^1.11.7"
   }
 }
