--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "node": "16"
   },
   "dependencies": {
-    "dayjs": "^1.11.7"
+    "css-loader": "^6.7.3",
+    "dayjs": "^1.11.7",
+    "style-loader": "^3.3.2"
   }
 }
