--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.16.0",
     "@babel/plugin-proposal-optional-chaining": "7.16.0",
     "@babel/preset-env": "7.20.2",
-    "babel-eslint": "^10.1.0",
+    "babel-eslint": "10.1.0",
     "babel-loader": "8.2.3",
     "copy-webpack-plugin": "11.0.0",
     "css-loader": "6.5.1",
@@ -43,6 +43,6 @@
     "dayjs": "1.10.7",
     "flatpickr": "4.6.9",
     "he": "1.2.0",
-    "nanoid": "^4.0.2"
+    "nanoid": "4.0.2"
   }
 }
