--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "eslint": "eslint src/",
     "test": "npm run eslint",
     "build": "webpack --mode production",
-    "start": "webpack serve --mode development --open"
+    "start": "webpack serve --mode development --open --port 9032"
   },
   "devDependencies": {
     "@babel/core": "7.16.0",
@@ -23,7 +23,6 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.16.0",
     "@babel/plugin-proposal-optional-chaining": "7.16.0",
     "@babel/preset-env": "7.20.2",
-    "babel-eslint": "10.1.0",
     "babel-loader": "8.2.3",
     "copy-webpack-plugin": "11.0.0",
     "css-loader": "6.5.1",
@@ -38,11 +37,9 @@
     "node": "16"
   },
   "dependencies": {
-    "chart.js": "2.9.4",
-    "chartjs-plugin-datalabels": "0.7.0",
-    "dayjs": "1.10.7",
-    "flatpickr": "4.6.9",
-    "he": "1.2.0",
-    "nanoid": "4.0.2"
+    "dayjs": "1.11.7",
+    "duration": "0.2.2",
+    "flatpickr": "4.6.13",
+    "he": "1.2.0"
   }
 }
